; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsstring.c_Sp_split.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsstring.c_Sp_split.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @Sp_split to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Sp_split(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i64 @js_isundefined(i32* %3, i32 1)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @js_newarray(i32* %7)
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @js_copy(i32* %9, i32 0)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @js_setindex(i32* %11, i32 -2, i32 0)
  br label %24

13:                                               ; preds = %1
  %14 = load i32*, i32** %2, align 8
  %15 = call i64 @js_isregexp(i32* %14, i32 1)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %13
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @Sp_split_regexp(i32* %18)
  br label %23

20:                                               ; preds = %13
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @Sp_split_string(i32* %21)
  br label %23

23:                                               ; preds = %20, %17
  br label %24

24:                                               ; preds = %23, %6
  ret void
}

declare dso_local i64 @js_isundefined(i32*, i32) #1

declare dso_local i32 @js_newarray(i32*) #1

declare dso_local i32 @js_copy(i32*, i32) #1

declare dso_local i32 @js_setindex(i32*, i32, i32) #1

declare dso_local i64 @js_isregexp(i32*, i32) #1

declare dso_local i32 @Sp_split_regexp(i32*) #1

declare dso_local i32 @Sp_split_string(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
